update question 4 parser